# pmer

./: .env.example  migrate_database.py  pyproject.toml
app/: __init__.py  models.py  routes.py
app/auth/: routes.py
app/commands/: __init__.py  routes.py
app/passwords/: __init__.py  routes.py
app/templates/: auth.html  commands.html  index.html
web/: .env.example  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
web/src/: App.svelte  App.tsx
web/src/components/: layout.tsx  theme-provider.tsx  theme-toggle.tsx
web/src/components/ui/: button.tsx  label.tsx  textarea.tsx  toast.tsx
web/src/lib/: types.ts
web/src/lib/api/: auth.ts  client.ts  commands.ts  passwords.ts
web/src/lib/components/pages/: Auth.svelte  Commands.svelte  Passwords.svelte  PasswordsSimple.svelte
web/src/lib/components/ui/: Button.svelte  Input.svelte  Label.svelte  Modal.svelte  Textarea.svelte  Toast.svelte
web/src/lib/stores/: auth.ts  theme.ts  toast.ts
web/src/lib/types/: index.ts
web/src/lib/utils/: config.ts  toast.ts
web/src/pages/: Auth.tsx  Commands.tsx  Passwords.tsx  Profile.tsx  SetupTwoFactor.tsx
